Show replay range, if any